--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
       - DB_CONNECTION=${DB_CONNECTION:-mysql}
       - DB_HOST=${DB_HOST:-db}
       - DB_PORT=${DB_PORT:-3306}
-      - DB_DATABASE=${DB_DATABASE:-laravel}
-      - DB_USERNAME=${DB_USERNAME:-phper}
+      - DB_DATABASE=${DB_DATABASE:-lifestyle-diagnosis}
+      - DB_USERNAME=${DB_USERNAME:-lifestyleuser}
       - DB_PASSWORD=${DB_PASSWORD:-secret}
 
   web:
@@ -60,15 +60,7 @@ services:
         volume:
           nocopy: true
     environment:
-      - MYSQL_DATABASE=${DB_DATABASE:-laravel}
-      - MYSQL_USER=${DB_USERNAME:-phper}
+      - MYSQL_DATABASE=${DB_DATABASE:-lifestyle-diagnosis}
+      - MYSQL_USER=${DB_USERNAME:-lifestyleuser}
       - MYSQL_PASSWORD=${DB_PASSWORD:-secret}
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD:-secret}
-
-  mailhog:
-    image: mailhog/mailhog
-    ports:
-      - target: 8025
-        published: ${MAILHOG_PUBLISHED_PORT:-8025}
-        protocol: tcp
-        mode: host
