--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.4.1"
+    "nuxt": "^3.4.1",
+    "sass": "^1.62.0",
+    "vite-plugin-vuetify": "^1.0.2"
+  },
+  "dependencies": {
+    "mdi": "^2.2.43",
+    "vuetify": "^3.1.4"
   }
 }
