--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "vite-plugin-vuetify": "^1.0.2"
   },
   "dependencies": {
+    "@mdi/font": "^7.2.96",
     "mdi": "^2.2.43",
     "vuetify": "^3.1.4"
   }
