--- a/front/package.json
+++ b/front/package.json
@@ -6,9 +6,13 @@
     "dev": "nuxt dev --dotenv .env.local",
     "generate": "nuxt generate --dotenv .env.production",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint './*/*.{ts,vue}'",
+    "lint:fix": "eslint --fix ."
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "nuxt": "^3.4.1",
     "sass": "^1.62.0",
     "vite-plugin-vuetify": "^1.0.2"
