--- a/front/package.json
+++ b/front/package.json
@@ -8,14 +8,15 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint './*/*.{ts,vue}'",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix './*/*.{ts,vue}'"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "nuxt": "^3.4.1",
     "sass": "^1.62.1",
-    "vite-plugin-vuetify": "^1.0.2"
+    "vite-plugin-vuetify": "^1.0.2",
+    "vite-svg-loader": "^4.0.0"
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
