--- a/front/package.json
+++ b/front/package.json
@@ -8,20 +8,13 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint './*/*.{ts,vue}'",
-    "lint:fix": "eslint --fix './*/*.{ts,vue}'",
-    "lint-style": "stylelint \"**/*.vue\" \"./assets/css/*.css\" ",
-    "lint-style:fix": "stylelint \"**/*.vue\" \"./assets/css/*.css\" --fix"
+    "lint:fix": "eslint --fix './*/*.{ts,vue}'"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "nuxt": "^3.4.1",
-    "postcss-html": "^1.5.0",
     "sass": "^1.62.1",
-    "stylelint": "^15.10.1",
-    "stylelint-config-recommended-scss": "^12.0.0",
-    "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard": "^34.0.0",
     "vite-plugin-vuetify": "^1.0.2",
     "vite-svg-loader": "^4.0.0"
   },
