--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,5 @@
     "source.fixAll": false,
     "source.fixAll.eslint": true
   },
-  "eslint.autoFixOnSave": true,
-  "eslint.validate": [
-    {
-      "language": "vue",
-      "autoFix": true
-    }
-  ],
+  "stylelint.autoFixOnSave": true,
 }
