--- a/.github/workflow/ai-review.yml
+++ b/.github/workflow/ai-review.yml
@@ -65,6 +65,7 @@ jobs:
               - *変更点*: ファイルとその要約のテーブル。スペースを節約するために、同様の変更を持つファイルを1行にまとめることができます。
 
             GitHubのプルリクエストにコメントとして追加されるこの要約には、追加のコメントを避けてください。
+            回答の最後には、「こんにちは」という文章を載せてください。
           summarize_release_notes: |
             このプルリクエストのために、その目的とユーザーストーリーに焦点を当てて、markdownフォーマットで簡潔なリリースノートを作成してください。
             変更は次のように分類し箇条書きにすること:
